--- a/style.css
+++ b/style.css
@@ -1,373 +1,508 @@
-/* Importing Google Font - Open Sans */
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
+*{
+    margin: 0;
+    padding: 0;
+    font-family:'poppins' , sans-serif;
+    box-sizing: border-box;
+}
+a{
+    text-decoration: none;
+    color: #5a5a5a;
 }
 
-/* Color variables for light theme */
-:root {
-  --white-color: #fff;
-  --black-color: #000;
-  --light-white-color: #f0f0f0;
-  --light-gray-color: #e5e5e5;
-  --border-color: #ccc;
-  --primary-color: #3b82f6;
-  --secondary-color: #404040;
-  --overlay-dark-color: rgba(0, 0, 0, 0.6);
+img{
+    cursor: pointer;
 }
 
-/* Color variables for dark theme */
-.dark-mode {
-  --white-color: #171717;
-  --black-color: #d4d4d4;
-  --light-white-color: #333;
-  --light-gray-color: #404040;
-  --border-color: #808080;
-  --secondary-color: #d4d4d4;
+.flex-div{
+     display: flex;
+     align-items: center;
+
 }
-
-body {
-  background: var(--white-color);
-}
-
-.container {
-  display: flex;
-  overflow: hidden;
-  max-height: 100vh;
-  flex-direction: column;
-}
-
-header, .sidebar .nav-left, .category-list {
-  position: sticky;
-  top: 0;
-  z-index: 10;
-  background: var(--white-color);
-}
-
-.navbar {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
-  padding: 0.5rem 1rem;
-  justify-content: space-between;
-}
-
-:where(.navbar, .sidebar) .nav-section {
-  gap: 1rem;
-}
-
-:where(.navbar, .sidebar) :where(.nav-section, .nav-logo, .search-form) {
-  display: flex;
-  align-items: center;
-}
-
-:where(.navbar, .sidebar) :where(.logo-image, .user-image) {
-  width: 32px;
-  cursor: pointer;
-  border-radius: 50%;
-}
-
-:where(.navbar, .sidebar) .nav-section .nav-button {
-  border: none;
-  height: 40px;
-  width: 40px;
-  cursor: pointer;
-  background: none;
-  border-radius: 50%;
-}
-
-:where(.navbar, .sidebar) .nav-section .nav-button:hover {
-  background: var(--light-gray-color) !important;
-}
-
-:where(.navbar, .sidebar) .nav-button i {
-  font-size: 1.5rem;
-  display: flex;
-  color: var(--black-color);
-  align-items: center;
-  justify-content: center;
-}
-
-:where(.navbar, .sidebar) .nav-logo {
-  display: flex;
-  gap: 0.5rem;
-  text-decoration: none;
-}
-
-:where(.navbar, .sidebar) .nav-logo .logo-text {
-  color: var(--black-color);
-  font-size: 1.25rem;
-}
-
-.navbar .nav-center {
-  gap: 0.5rem;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.navbar .search-form {
-  flex: 1;
-  height: 40px;
-  max-width: 550px;
-}
-
-.navbar .search-form .search-input {
-  width: 100%;
-  height: 100%;
-  font-size: 1rem;
-  padding: 0 1rem;
-  outline: none;
-  color: var(--black-color);
-  background: var(--white-color);
-  border-radius: 3.1rem 0 0 3.1rem;
-  border: 1px solid var(--border-color);
-}
-
-.navbar .search-form .search-input:focus {
-  border-color: var(--primary-color);
-}
-
-.navbar .search-form .search-button {
-  height: 40px;
-  width: auto;
-  padding: 0 1.25rem;
-  border-radius: 0 3.1rem 3.1rem 0;
-  border: 1px solid var(--border-color);
-  border-left: 0;
-}
-
-.navbar .nav-center .mic-button {
-  background: var(--light-white-color);
-}
-
-.navbar .nav-right .search-button {
-  display: none;
-}
-
-.main-layout {
-  display: flex;
-  overflow-y: auto;
-  scrollbar-color: #a6a6a6 transparent;
-}
-
-.main-layout .sidebar {
-  width: 280px;
-  overflow: hidden;
-  padding: 0 0.7rem 0;
-  background: var(--white-color);
-}
-
-.main-layout .sidebar .nav-left {
-  display: none;
-  padding: 0.5rem 0.3rem;
-}
-
-body.sidebar-hidden .main-layout .sidebar {
-  width: 0;
-  padding: 0;
-}
-
-.sidebar .links-container {
-  padding: 1rem 0 2rem;
-  overflow-y: auto;
-  height: calc(100vh - 60px);
-  scrollbar-width: thin;
-  scrollbar-color: transparent transparent;
-}
-
-.sidebar .links-container:hover {
-  scrollbar-color: #a6a6a6 transparent;
-}
-
-.sidebar .link-section .link-item {
-  display: flex;
-  color: var(--black-color);
-  white-space: nowrap;
-  align-items: center;
-  font-size: 0.938rem;
-  padding: 0.37rem 0.75rem;
-  margin-bottom: 0.25rem;
-  border-radius: 0.5rem;
-  text-decoration: none;
-}
-
-.sidebar .link-section .link-item:hover {
-  background: var(--light-gray-color);
-}
-
-.sidebar .link-section .link-item i {
-  font-size: 1.4rem;
-  margin-right: 0.625rem;
-}
-
-.sidebar .link-section .section-title {
-  color: var(--black-color);
-  font-weight: 600;
-  font-size: 0.938rem;
-  margin: 1rem 0 0.5rem 0.5rem;
-}
-
-.sidebar .section-separator {
-  height: 1px;
-  margin: 0.64rem 0;
-  background: var(--light-gray-color);
-}
-
-.main-layout .content-wrapper {
-  padding: 0 1rem;
-  overflow-x: hidden;
-  width: 100%;
-}
-
-.content-wrapper .category-list {
-  display: flex;
-  overflow-x: auto;
-  gap: 0.75rem;
-  padding: 0.75rem 0 0.7rem;
-  scrollbar-width: none;
-}
-
-.category-list .category-button {
-  border: none;
-  cursor: pointer;
-  font-weight: 500;
-  font-size: 0.94rem;
-  border-radius: 0.5rem;
-  white-space: nowrap;
-  color: var(--black-color);
-  padding: 0.4rem 0.75rem;
-  background: var(--light-gray-color);
-}
-
-.category-list .category-button.active {
-  color: var(--white-color);
-  background: var(--black-color);
-  pointer-events: none;
-}
-
-.dark-mode .category-list .category-button.active {
-  filter: brightness(120%);
-}
-
-.category-list .category-button:not(.active):hover {
-  background: var(--border-color);
-}
-
-.content-wrapper .video-list {
-  display: grid; 
-  gap: 1rem;
-  padding: 1.25rem 0 4rem;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-}
-
-.video-list .video-card {
-  text-decoration: none;
-}
-
-.video-list .video-card .thumbnail-container {
-  position: relative;
-}
-
-.video-list .video-card .thumbnail {
-  width: 100%;
-  object-fit: contain;
-  border-radius: 0.5rem;
-  aspect-ratio: 16 / 9;
-  background: var(--light-white-color);
-}
-
-.video-list .video-card .duration {
-  position: absolute;
-  right: 0.65rem;
-  bottom: 0.8rem;
-  color: #fff;
-  font-size: 0.875rem;
-  padding: 0 0.3rem;
-  border-radius: 0.3rem;
-  background: var(--overlay-dark-color);
-}
-
-.video-list .video-card .video-info {
-  display: flex;
-  gap: 0.7rem;
-  padding: 0.7rem 0.5rem;
-}
-
-.video-list .video-card .icon {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-}
-
-.video-list .video-card .title {
-  font-size: 1rem;
-  color: var(--black-color);
-  font-weight: 600;
-  line-height: 1.375;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-}
-
-.video-list .video-card:hover .title {
-  color: var(--primary-color);
-}
-
-.video-list .video-card p {
-  font-size: 0.875rem;
-  color: var(--secondary-color);
-}
-
-.video-list .video-card .channel-name {
-  margin: 0.25rem 0 0.15rem;
-}
-
-/* Responsive media code for small devices */
-@media (max-width: 768px) {
-  .navbar .nav-center {
-    display: none;
-  }
-
-  .navbar .nav-right .search-button {
-    display: block;
-  }
-
-  .main-layout .screen-overlay {
-    position: absolute;
-    left: 0;
+nav{
+    padding: 0px 2%;
+    justify-content: space-between;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    background: #fff;
+    position: sticky;
     top: 0;
-    z-index: 15;
-    width: 100%;
+    z-index: 10;
+}
+
+
+.nav-right img{
+    width: 25px;
+    margin-right: 25px;
+}
+
+.nav-right .user-icon{
+width: 35px;
+margin-right: 0px;
+border-radius: 50%;
+
+}
+
+.nav-left .menu-icon{
+    width: 22px;
+    margin-right: 25px;
+
+}
+
+.nav-left .logo{
+    width: 130px;
+
+}
+
+.nav-middle .mic-icon{
+    width: 16px;
+
+}
+.nav-middle .search-box{
+    border: 1px solid #ccc;
+    margin-right: 15px;
+    padding: 8px 12px;
+    /* border-radius: 25px; */
+}
+
+.nav-middle .search-box input{
+    width: 400px;
+    border: 0;
+    outline: 0;
+    background: transparent;
+}
+.nav-middle .search-box img{
+    width: 15px;
+   
+}
+
+/* sidebar */
+.sidebar{
+    background: #fff;
+    width: 15%;
     height: 100vh;
-    background: var(--overlay-dark-color);
-    transition: 0.2s ease;
-  }
-
-  body.sidebar-hidden .main-layout .screen-overlay {
-    opacity: 0;
-    pointer-events: none;
-  }
-
-  .main-layout .sidebar {
-    position: absolute;
-    left: 0;
+    position: fixed;
     top: 0;
-    z-index: 20;
-    height: 100vh;
-    transition: 0.2s ease;
-  }
+    padding-left: 2%;
+    padding-top: 98px;
 
-  body.sidebar-hidden .main-layout .sidebar {
-    left: -280px;
-  }
+}
 
-  .main-layout .sidebar .nav-left {
+.shortcut-links a img{
+width: 20px;
+margin-right: 20px;
+}
+
+.shortcut-links a{
     display: flex;
-  }
+    align-items: center;
+    margin-bottom: 20px;
+    width: fit-content;
+    flex-wrap: wrap;
+    margin-top: 13px;
 }
+
+
+.shortcut-links a:first-child{
+    color: #ed3833;
+}
+
+.sidebar hr{
+    border: 0;
+    height: 1px;
+    background: #ccc;
+    width: 85%;
+}
+.subscribed-list h3{
+    font-size: 13px;
+    margin: 20px 0;
+    color: #5a5a5a;
+}
+.subscribed-list a{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    width: fit-content;
+    flex-wrap: wrap;
+}
+.subscribed-list a img{
+    width: 25px;
+    border-radius: 50%;
+    margin-right: 28px;
+}
+
+
+.small-sidebar{
+    width: 5%;
+}
+.small-sidebar .shortcut-links a p  , .small-sidebar .subscribed-list a , .small-sidebar h3{
+    display: none;
+}
+
+.small-sidebar hr{
+    width: 50%;
+    margin-bottom: 25px;
+    display: none;
+
+}
+/* main Body */
+.container{
+   background: #f9f9f9;
+   padding-left: 17%;
+   padding-right: 2%;
+   padding-top: 20px;
+   padding-bottom: 20px;
+}
+.large-container{
+    padding-left: 7%; 
+}
+.banner{
+    width: 100%;
+    display: none;
+}
+
+.banner img{
+    width: 100%;
+    border-radius: 8px;
+}
+
+
+.list-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-column-gap: 16px;
+    grid-row-gap: 30px;
+    margin-top: 15px;
+}
+
+.vid-list .thumbnail{
+   width: 100%;
+   border-radius: 5px;
+
+}
+.vid-list .flex-div{
+    align-items: flex-start;
+    margin-top: 7px;
+}
+
+.vid-list .flex-div img{
+    width: 35px;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+
+.vid-info{
+    color: #5a5a5a;
+    font-size: 13px;
+
+}
+
+.vid-info a{
+    color: black;
+    font-weight: 600;
+    display: block;
+    margin: bottom 5px;;
+}
+
+
+@media (max-width: 900px) {
+    .menu-icon{
+        display: none;
+    }
+
+    .sidebar{
+        display: none;
+    } 
+
+   .container, .large-container{
+       padding-left: 5%;
+       padding-right: 5%;   
+   }
+
+   /* .nav-right img{
+  
+    display: none;
+   } */
+
+   .nav-right .user-icon{
+       display: block;
+       width: 30px;
+   }
+
+   .nav-middle .search-box {
+       width: 100px;
+       display: none;
+
+   }
+
+   .nav-middle .mic-icon{
+       display: none;
+   }
+
+   .logo{
+       width: 90px;
+   }
+
+}
+
+/*******      Video -9      *****/
+
+
+.play-container{
+    padding-left: 2% !important;
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+.play-video{
+    flex-basis: 69%;
+}
+
+.right-sidebar{
+    flex-basis: 30%;
+}
+
+.play-video video{
+    width: 100%;
+}
+.side-video-list{
+
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 8px;
+}
+
+.side-video-list img{
+    width: 100%;
+
+}
+.side-video-list .small-thumbnail{
+    flex-basis: 49%;
+
+}
+
+.side-video-list .vid-info{
+
+    flex-basis: 49%;
+}
+
+.play-video .tags a{
+   
+    color: #0000ff;
+    font-size: 13px;
+}
+
+.play-video h3{
+    font-weight: 600;
+    font-size: 22px;
+    margin-top: 12px;
+}
+
+.play-video .play-video-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 5px;
+    font-size: 14px;
+    color: #5a5a5a;
+}
+
+.play-video .play-video-info a img{
+    width: 20px;
+    margin-right: 8px;
+
+}
+
+.play-video .play-video-info a{
+    display: inline-flex;
+    align-items: center;
+    margin-left: 15px;
+
+}
+
+.play-video hr{
+    border: 0;
+    height: 1px;
+    background: #ccc;
+    margin: 10px 0;
+}
+
+.owner{
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.owner div{
+    flex: 1;
+    line-height: 18px;   
+}
+
+.owner img{
+    width: 40px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.owner p{
+    color: #000;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+
+.owner span{
+    font-size: 13px;
+    color: #5a5a5a;
+}
+
+
+.owner button{
+    background: #ed3833;
+    color: #fff;
+    padding: 8px 30px;
+    border: 0;
+    outline: 0;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.vid-des{
+    padding-left: 55px;
+    margin: 15px 0;
+}
+
+.vid-des p{
+    
+    font-size: 14px;
+    margin-bottom: 5px;
+    color: #5a5a5a;
+}
+
+.vid-des .cmnt{
+    display: flex;
+    margin-top: 15px;
+}
+.cmnt img{
+    width: 24px;
+    height: 17px;
+    margin-left: 46px;
+    margin-right: 14px;
+}
+
+.vid-des h4{
+    font-size: 14px;
+    color: #5a5a5a;
+    /* margin-top: 15px; */
+}
+
+.add-cmnt{
+    display: flex;
+    align-items: center;
+    margin: 30px 0;
+}
+
+.add-cmnt img{
+    width: 35px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.add-cmnt input{
+    border: 0;
+    outline: 0;
+    border-bottom: 1px solid #5a5a5a;
+    width: 100%;
+    padding-top: 10px;
+    background: transparent;
+}
+
+.old-cmnt{
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.old-cmnt img{
+    width: 35px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.old-cmnt h3{
+    font-size: 14px;
+    margin-bottom: 2px;
+}
+
+.old-cmnt h3 span{
+    font-size: 12px;
+    color: #5a5a5a;
+    font-weight: 500;
+    margin-left: 8px;
+}
+
+.old-cmnt .cmnt-react{
+    display: flex;
+    align-items: center;
+    margin:8px 0;
+    font-size: 14px;
+}
+
+.old-cmnt .cmnt-react img{
+
+    width: 20px;
+    border-radius: 0;
+    margin-right: 5px;
+}
+
+.old-cmnt .cmnt-react span{
+    margin-right: 20px;
+    color: #5a5a5a;
+
+}
+
+.old-cmnt .cmnt-react div{
+    color: blue;
+    display: block;
+}
+.hide-hr{
+    display: none;
+}
+@media (max-width: 900px){
+
+    .play-video{
+        flex-basis: 100%;
+    }
+
+
+    .right-sidebar{
+        flex-basis: 100%;
+        margin-top: 35px;
+    }
+
+    .play-container{
+        padding-left: 5%;
+    }
+
+    .vid-des {
+        padding-left: 5px;
+    }
+ 
+    .play-video .play-video-info a{
+        margin-left: 0;
+        margin-right: 15px;
+        margin-top: 15px;
+    }
+    
+    .hide-hr{
+        display: block;
+    }
+
+}
+
+
+
+
